formatting & mobile fixes

--- a/templates/dynamic/styles/cards.css.jinja
+++ b/templates/dynamic/styles/cards.css.jinja
@@ -16,11 +16,11 @@
                 width: -webkit-fill-available;
                 width: -moz-available;
                 max-width: {{ min_width_team_summary }}px;
-                min-width: fit-content;
+                /*min-width: fit-content;*/
                 justify-content: center;
                 justify-items: center;
                 overflow: auto;
-                
+                grid-template-rows: 1fr 1fr 1fr;                
             }
 
             .table_card {
