--- a/static/styles/primary_button.css
+++ b/static/styles/primary_button.css
@@ -19,4 +19,22 @@
     margin-top: -16px;
     grid-row: 1;
     grid-column: 3;
+    margin-left: 8px;
+    justify-self: baseline;
+}
+
+.show-top5-btn{
+    grid-row: 2;
+    grid-column: 1;
+    align-self: center;
+    margin-top: 32px;
+}
+
+.show-top5-btn-opponent{
+    grid-row: 2;
+    grid-column: 3;
+    align-self: left;
+    margin-top: 16px;
+    margin-left: 8px;
+    justify-self: baseline;
 }
