--- a/static/styles/top_scorer.css
+++ b/static/styles/top_scorer.css
@@ -4,7 +4,6 @@
     align-self: baseline;
   
 }
-
 .top-scorer-info {
     grid-row: 2;
     grid-column: 2;
@@ -19,9 +18,27 @@
     align-self: end;
     justify-self: end;
     }
-.show-top5-btn{
-    grid-row: 2;
-    grid-column: 1;
-    align-self: center;
-    margin-top: 32px;
+
+
+.top-scorer-label-opponent {
+    grid-row: 2; 
+    grid-column: 1;    
+    display: none;
+    justify-self: baseline;
+    margin-left: 16px;
+  
 }
+.top-scorer-info-opponent {
+    grid-row: 2;
+    grid-column: 2;
+    align-items: center;
+    text-align: center;
+    align-self: baseline;
+
+}
+.headshot-img-opponent {
+    grid-row: 1 / span 2;  
+    grid-column: 1;
+    align-self: end;
+    justify-self: end;
+    }
