--- a/static/styles/upcoming_game.css
+++ b/static/styles/upcoming_game.css
@@ -1,6 +1,6 @@
 .upcoming_game{
-    grid-row: 3;
-    grid-column: 1 / span 3
+    grid-row: 1;
+    grid-column: 2
 }
 .upcoming_game span{
     display: flex;
