--- a/templates/index.html
+++ b/templates/index.html
@@ -125,7 +125,7 @@
                     {{html_next_opponent_summary | safe  }}
                 </div>      
                 <button class="primary_button upcoming_games_button"  id="moreGames">
-                    Show Next 5        
+                    Next 5        
                 </button>
                 <!-- Opponent Topscorer -->
                 <div class="top-scorer-label-opponent" >
