--- a/templates/dynamic/styles/media_scaling.css.jinja
+++ b/templates/dynamic/styles/media_scaling.css.jinja
@@ -67,10 +67,10 @@
         grid-row: 1;
     }   
     .upcoming_games_button{
-        grid-column: 2;
-        justify-self: center;
-        align-self: end;
-        margin-left: 42px;
+        grid-column: 3;
+        justify-self: start;
+        align-self: center;
+        margin-left: 8px;
     }
 
     .previous_game_card {
@@ -194,9 +194,9 @@
     }   
     .upcoming_games_button{
         grid-column: 2;
-        justify-self: baseline;
-        margin-left: 16px;
-        align-self: end;
+        justify-self: start;
+        margin-left: 144px;
+        align-self: center;
     }
     .team-summary{
         grid-row: 4;
