--- a/templates/dynamic/styles/media_scaling.css.jinja
+++ b/templates/dynamic/styles/media_scaling.css.jinja
@@ -67,10 +67,10 @@
         grid-row: 1;
     }   
     .upcoming_games_button{
-        grid-column: 3;
-        justify-self: start;
-        align-self: center;
-        margin-left: 8px;
+        grid-column: 2;
+        justify-self: end;
+        align-self: end;
+        margin-top: 8px;
     }
 
     .previous_game_card {
