--- a/templates/dynamic/styles/media_scaling.css.jinja
+++ b/templates/dynamic/styles/media_scaling.css.jinja
@@ -196,7 +196,7 @@
         grid-column: 2;
         justify-self: start;
         margin-left: 120px;
-        align-self: center;
+        align-self: baseline;
     }
     .team-summary{
         grid-row: 4;
