--- a/templates/index.html
+++ b/templates/index.html
@@ -248,9 +248,9 @@
     </div> 
 
 <!---Player Cards --------------------------------------------------------->
-        <div  style="display: none" class="container">
-            <div class="card_display player-card"
-                <h2  class="top_card_header">{{ top_scorer['name'] }}</h2>
+        <div style="display: none" class="container">
+            <div class="card_display player-card">
+                <h2 class="top_card_header">{{ top_scorer['name'] }}</h2>
                 <div>
                     <img src={{ top_scorer['heroImage_url'] }} style="max-width: 250px;">
                 </div>
