--- a/static/styles/top_scorer.css
+++ b/static/styles/top_scorer.css
@@ -16,8 +16,16 @@
     grid-row: 1 / span 2;  
     grid-column: 3;
     align-self: end;
-    justify-self: end;
+    /* justify-self: end; */
+
     }
+
+.headshot-img > img, .headshot-img-opponent > img {    
+    max-width: 150px;
+    border-radius: 50%;
+    border: solid 1px #d1d1d1;
+    background: #f2f2f2;
+}
 
 
 .top-scorer-label-opponent {
@@ -40,5 +48,5 @@
     grid-row: 1 / span 2;  
     grid-column: 1;
     align-self: end;
-    justify-self: end;
+    /* justify-self: end; */
     }
