--- a/static/styles/upcoming_game.css
+++ b/static/styles/upcoming_game.css
@@ -1,6 +1,8 @@
 .upcoming_game{
     grid-row: 1;
-    grid-column: 2
+    grid-column: 2;
+    padding: 0 12px;
+
 }
 .upcoming_game span{
     display: flex;
