--- a/static/styles/top_scorer_modal.css
+++ b/static/styles/top_scorer_modal.css
@@ -31,6 +31,9 @@
         img {
             max-width: 120px;  
             height: auto;
+            border-radius: 50%;
+            border: solid 1px #d1d1d1;
+            background: #f2f2f2;
         }
         td, th {
             padding: 4px 6px;
