--- a/static/styles/upcoming_game.css
+++ b/static/styles/upcoming_game.css
@@ -1,7 +1,8 @@
 .upcoming_game{
     grid-row: 1;
-    grid-column: 2;
+    grid-column: 2 / span 2;
     padding: 0 12px;
+    justify-self: baseline;
 
 }
 .upcoming_game span{
@@ -9,4 +10,12 @@
     align-items: center;
     padding-block-end: 12px;
     
+}
+
+.previous-matchup{
+    grid-row: 2;
+    grid-column: 3;
+    padding: 0 12px;
+    text-align: center;
+
 }
