--- a/static/styles/styling.css
+++ b/static/styles/styling.css
@@ -14,12 +14,16 @@
 }
 
 body {
-  font-family: 'DINPro', sans-serif;
+  font-family: 'Overpass', sans-serif;
 }
 
 h1, h2, h3 {
   font-family: 'DINPro', sans-serif;
   font-weight: bold;
+}
+
+.alt-font {
+    font-family: sans-serif;
 }
 
 .disclaimer {
@@ -31,3 +35,4 @@ h1, h2, h3 {
             border-top: 1px solid #ddd;
             font-family: 'DINPro', sans-serif;
         }
+
