--- a/static/styles/top_scorer.css
+++ b/static/styles/top_scorer.css
@@ -13,15 +13,16 @@
 
 }
 .headshot-img {
-    grid-row: 1 / span 2;  
-    grid-column: 3;
+    grid-row: 2;  
+    grid-column: 1;
     align-self: end;
-    /* justify-self: end; */
+    text-align: center;
+
 
     }
 
 .headshot-img > img, .headshot-img-opponent > img {    
-    max-width: 150px;
+    max-width: 140px;
     border-radius: 50%;
     border: solid 1px #d1d1d1;
     background: #f2f2f2;
@@ -45,8 +46,9 @@
 
 }
 .headshot-img-opponent {
-    grid-row: 1 / span 2;  
-    grid-column: 1;
+    grid-row: 2;  
+    grid-column: 3;
     align-self: end;
-    /* justify-self: end; */
+    text-align: center;
+
     }
