--- a/templates/dynamic/styles/cards.css.jinja
+++ b/templates/dynamic/styles/cards.css.jinja
@@ -20,7 +20,7 @@
                 justify-content: center;
                 justify-items: center;
                 overflow: auto;
-                grid-template-rows: 1fr min-content minmax(min-content, 32px);                
+                grid-template-rows: minmax(min-content, 70px) min-content minmax(min-content, 32px);                
             }
 
             .table_card {
