--- a/static/styles/upcoming_game.css
+++ b/static/styles/upcoming_game.css
@@ -8,7 +8,7 @@
 .upcoming_game span{
     display: flex;
     align-items: center;
-    padding-block-end: 12px;
+    padding-block-end: 0px;
     
 }
 
@@ -18,4 +18,10 @@
     padding: 0 12px;
     text-align: center;
 
+}
+
+.previous-matchup-date{
+    align-content: center;
+    grid-row: 1;
+    grid-column: 2;
 }
