--- a/templates/dynamic/styles/media_scaling.css.jinja
+++ b/templates/dynamic/styles/media_scaling.css.jinja
@@ -17,8 +17,16 @@
         margin-left: 48px;
         justify-self: baseline;
     }
+    .headshot-img > img, .headshot-img-opponent > img {    
+        max-width: 130px;
+    }
+    .previous-matchup{
+        grid-row: 2;
+        grid-column: 2;
+    }
 
 }
+
 
 @media (max-width: {{max_width_small_screen}}px) {
     
@@ -30,8 +38,8 @@
         grid-row: 1;
     }   
     .upcoming_games_button{
-        grid-column: 2;        
-        align-self: end;
+        grid-column: 3;        
+        align-self: center;
         margin-top: 16px;
         margin-left: 82px;
         justify-self: center;
@@ -55,6 +63,21 @@
     
     .tab:hover {       
         margin-bottom: -1px;
+    }
+
+    .headshot-img > img, .headshot-img-opponent > img {    
+    max-width: 110px;
+    }
+
+
+        .previous-matchup{
+        grid-row: 3;
+        grid-column: 1;
+    }
+    .previous-matchup-date{
+        align-content: baseline;
+        grid-row: 2;
+        grid-column: 1;
     }
 }
 
@@ -93,13 +116,15 @@
 
     .upcoming_game{
         grid-row: 1;
-        grid-column: 1 / span 2;
+        grid-column: 2 / span 2;
     }   
     .upcoming_games_button{
-        grid-column: 2;
+        grid-column: 3;
         justify-self: start;
-        margin-left: 120px;
-        align-self: baseline;
+        margin-left: 0px;
+        margin-bottom: 8px;
+        margin-top: 80px;
+        align-self: end;
     }
     .team-summary{
         grid-row: 4;
@@ -129,6 +154,18 @@
 
     .tab:hover {
         margin-bottom: -1px;
+    }
+    .headshot-img > img, .headshot-img-opponent > img {    
+    max-width: 110px;
+    }
+    .previous-matchup{
+        grid-row: 3;
+        grid-column: 1;
+    }
+    .previous-matchup-date{
+        align-content: baseline;
+        grid-row: 2;
+        grid-column: 1;
     }
 }
 
