--- a/templates/index.html
+++ b/templates/index.html
@@ -203,7 +203,7 @@
             <div class="top_row_element card_display">
                 <h2  class="top_card_header">Top scorers</h2> 
                 <div class="headshot-img">
-                    <img src={{ top_scorer['headshot_url'] }} style="max-width: 150px;">
+                    <img src={{ top_scorer['headshot_url'] }}">
                     <p style="margin-block-end: 0"><b>{{top_scorer['name']}}</b> </p>    
                     <p style="margin-block: 0"> #{{top_scorer['sweaterNumber']}} {{top_scorer['position']}}</p>  
 
@@ -217,7 +217,7 @@
                     {{ skater_compare(top_scorer, top_scorer_opponent) }}
                 </div>
                 <div class="headshot-img-opponent">
-                    <img src={{ top_scorer_opponent['headshot_url'] }} style="max-width: 150px;">
+                    <img src={{ top_scorer_opponent['headshot_url'] }} ">
                     <p style="margin-block-end: 0"><b>{{top_scorer_opponent['name']}}</b> </p>    
                     <p style="margin-block: 0"> #{{top_scorer_opponent['sweaterNumber']}} {{top_scorer_opponent['position']}}</p>  
 
@@ -231,7 +231,7 @@
             <div class="top_row_element card_display">
                 <h2  class="top_card_header">Goalies</h2> 
                 <div class="headshot-img">
-                    <img src={{ goalies[0]['headshot_url']}} style="max-width: 150px;">
+                    <img src={{ goalies[0]['headshot_url']}}">
                     <p style="margin-block-end: 0"><b>{{goalies[0]['name']}}</b> </p>    
                     <p style="margin-block: 0"> #{{goalies[0]['sweaterNumber']}}</p>  
 
@@ -243,7 +243,7 @@
                     {{ goalie_compare(goalies[0], goalies_opponent[0]) }}
                  </div>
                 <div class="headshot-img-opponent">
-                    <img src={{goalies_opponent[0]['headshot_url'] }} style="max-width: 150px;">
+                    <img src={{goalies_opponent[0]['headshot_url'] }}">
                     <p style="margin-block-end: 0"><b>{{goalies_opponent[0]['name']}}</b> </p>    
                     <p style="margin-block: 0"> #{{goalies_opponent[0]['sweaterNumber']}}</p>  
 
@@ -252,7 +252,7 @@
         <!-- PREVIOUS MATCHUP AGAINST NEXT OPPONENT-->
             <div class="previous_game_card card_display">
                 <h2  class="top_card_header">Last meeting</h2> 
-                <div>
+                <div class="previous-matchup-date">
                     {{previous_date | safe }}
                 </div>
                 <div class="previous-matchup">
