--- a/templates/dynamic/styles/media_scaling.css.jinja
+++ b/templates/dynamic/styles/media_scaling.css.jinja
@@ -120,7 +120,7 @@
     }   
     .upcoming_games_button{
         grid-column: 3;
-        justify-self: start;
+        justify-self: center;
         margin-left: 0px;
         margin-bottom: 8px;
         margin-top: 80px;
