--- a/templates/index.html
+++ b/templates/index.html
@@ -231,7 +231,7 @@
             <div class="top_row_element card_display">
                 <h2  class="top_card_header">Goalies</h2> 
                 <div class="headshot-img">
-                    <img src={{ goalies[0]['headshot_url']}}>
+                    <img src={{ goalies[0]['heroImage_url']}}>
                     <p style="margin-block-end: 0"><b>{{goalies[0]['name']}}</b> </p>    
                     <p style="margin-block: 0"> #{{goalies[0]['sweaterNumber']}}</p>  
 
@@ -243,7 +243,7 @@
                     {{ goalie_compare(goalies[0], goalies_opponent[0]) }}
                  </div>
                 <div class="headshot-img-opponent">
-                    <img src={{goalies_opponent[0]['headshot_url'] }}>
+                    <img src={{goalies_opponent[0]['heroImage_url'] }}>
                     <p style="margin-block-end: 0"><b>{{goalies_opponent[0]['name']}}</b> </p>    
                     <p style="margin-block: 0"> #{{goalies_opponent[0]['sweaterNumber']}}</p>  
 
