--- a/static/styles/top_scorer.css
+++ b/static/styles/top_scorer.css
@@ -26,7 +26,7 @@
     border-radius: 50%;
     border: solid 1px #d1d1d1;
     background: #f2f2f2;
-    height: 140px;
+    aspect-ratio: 1 / 1;
     object-fit: cover;
 }
 
