--- a/templates/dynamic/styles/cards.css.jinja
+++ b/templates/dynamic/styles/cards.css.jinja
@@ -17,7 +17,7 @@
                 width: -moz-available;
                 max-width: {{ min_width_team_summary }}px;
                 /*min-width: fit-content;*/
-                justify-content: center;
+                justify-content: start;
                 justify-items: center;
                 overflow: auto;
                 grid-template-rows: minmax(min-content, 70px) min-content minmax(min-content, 0px);                
