--- a/static/styles/spoiler_button.css
+++ b/static/styles/spoiler_button.css
@@ -7,13 +7,15 @@
     position: absolute;
     width: 100%;
     min-width: fit-content;
+    min-height: max-content;
+    height: 100%;
     background: rgba(80, 80, 80, 1);
     color: white;
     border: none;
     padding: 4px 8px;
     cursor: pointer;
     border-radius: 12px;
-    transform: translateY(-25%);
+    transform: translateY(-4px);
     z-index: 10;
 
     span {
